...
                    verticalAlignment = Alignment.CenterVertically,
                ) {
                    Button(
                        modifier = Modifier.weight(1f),
                        onClick = { onModelLoadClick(state) },
                    ) {
                        Text(text = "Посмотреть в AR")
                    }
                    OutlinedButton(
                        modifier = Modifier.weight(1f),
                        onClick = { onDeleteModelClick(state) },
                    ) {
                        Text(text = "Удалить модель")
...
                }
            } else {
                Button(
                    modifier = Modifier.fillMaxWidth(),
                    onClick = { onModelLoadClick(state) },
                ) {
                    Text(text = "Скачать модель")
                }
            }

            if (state.cartQuantity > 0) {
                Row(
                    modifier = Modifier.fillMaxWidth(),
...
